--- a/60Class/rendomcolor.html
+++ b/60Class/rendomcolor.html
@@ -18,6 +18,7 @@
             border: 2px solid black;
             border-radius: 10px;
         }
+
         h1 {
             text-align: center;
             margin: 0;
@@ -29,9 +30,8 @@
             display: flex;
             flex-wrap: wrap;
             gap: 15px;
-            /* Space between boxes */
             justify-content: center;
-            /* Center boxes horizontally */
+
         }
 
         .box {
@@ -42,9 +42,7 @@
             font-weight: bold;
             color: white;
             width: 150px;
-            /* Equal size for all boxes */
             height: 150px;
-            /* Equal size for all boxes */
             border-radius: 8px;
         }
 
@@ -54,8 +52,8 @@
 
         #box2 {
             background-color: orange;
-        }    
-        
+        }
+
         #box3 {
             background-color: purple;
         }
@@ -82,13 +80,19 @@
         </div>
     </div>
     <script>
-        function changeColorById() {
-            document.getElementById("box1").style.backgroundColor = "red";
-            document.getElementById("box2").style.backgroundColor = "blue";
-            document.getElementById("box3").style.backgroundColor = "green";
-            document.getElementById("box4").style.backgroundColor = "purple";
-            document.getElementById("box5").style.backgroundColor = "orange";
+
+        const boxesContainer = document.querySelector(".boxes");
+        const boxes = document.querySelectorAll(".box");
+        function getRandomHexColor() {
+            return `#${Math.floor(Math.random() * 16777215).toString(16)}`;
         }
+        Array.from(boxes).forEach(e=>{
+            e.style.backgroundColor = getRandomHexColor()
+            e.style.color = getRandomHexColor()
+        })
+
+
+
     </script>
 
 </body>
